@@ -1,3 +1,7 @@
+2009-11-04  Kenneth Zadeck  <zadeck@naturalbridge.com>
+
+	* df-scan.c (df-uses-record): Add case zero_extract of mem.
+	
 2009-11-04  Eric Botcazou  <ebotcazou@adacore.com>
 
 	PR target/10127
